# BTrack

./: .gitignore  CMakeLists.txt  README.md
doc/: mainpage.dox
modules-and-plug-ins/: CMakeLists.txt
modules-and-plug-ins/max-external/: btrack~.cpp
modules-and-plug-ins/python-module/: CMakeLists.txt  build.sh  example.py  pyproject.toml  vcpkg-old.json  vcpkg.json
modules-and-plug-ins/python-module/src/: __init__.py  btrack_constants.hpp  btrackpy.cpp  btrackpy.hpp  btrackpy_orig.cpp  btrackpy_orig.hpp  build_constants.h.in  main.cpp
modules-and-plug-ins/vamp-plugin/: BTrackVamp.cpp  BTrackVamp.h  CMakeLists.txt
src/: BTrack.cpp  BTrack.h  CMakeLists.txt  CircularBuffer.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h  beat_tracker.cpp  beat_tracker.hpp  circular_buffer.h  fft_operator.hpp  fft_operator_fftw.cpp  fft_operator_fftw.hpp  fft_operator_kissfft.cpp  fft_operator_kissfft.hpp  onset_detection_function.cpp  onset_detection_function.hpp  transformers.cpp  utils.h  utils.hpp
src/btrack/: BTrack.cpp  BTrack.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h
src/btrack/fft/: CMakeLists.txt  btrack_fft.h  btrack_fft_fftw.cpp  btrack_fft_fftw.h  btrack_fft_kissfft.cpp  btrack_fft_kissfft.h
src/include/: beat_tracker.hpp  circular_buffer.h  fft_operator.hpp  onset_detection_function.h  onset_detection_function.hpp
src/include/transformers/: buffer.hpp  detection_function.hpp  fft_operator.hpp  transformer.hpp  transformer_pipeline.hpp  window_function.hpp
src/include/transformers/buffers/: all.h  array_buffer.h  buffer.h  circular_buffer.h  multi_buffer.h  single_value_buffer.h
src/include/transformers/transformers/: all.h  generic_transformer.h  specialized_transformers.h  transformer.h
src/original/: BTrack.cpp  BTrack.h  CMakeLists.txt  CircularBuffer.h  OnsetDetectionFunction.cpp  OnsetDetectionFunction.h  beat_tracker_original.h  btrack_config.h  onset_detection_function_original.h
src/transformers/beat/: acf_extract.h  adaptive_threshold.h  all.h  all.hpp  balanced_acf.h  beat_predictor.h  comb_filter_bank.h  constants.h  resampler.h  score_accumulator.h  tempo_calculator.h
src/transformers/fft/: fft_operator_fftw.cpp  fft_operator_fftw.hpp  fft_operator_kissfft.cpp  fft_operator_kissfft.hpp
src/transformers/manipulation/: all.h  all.hpp  extend.h  join.h  map.h  map.hpp  shift.h  shift.hpp  swap.h  swap.hpp  take.h  test.cpp
src/transformers/onset_detection/: all.hpp  complex_spectral_difference.hpp  complex_spectral_difference_hwr.hpp  energy_difference.hpp  energy_envelope.hpp  high_frequency_content.hpp  high_frequency_spectral_difference.hpp  high_frequency_spectral_difference_hwr.hpp  phase_deviation.hpp  spectral_difference.hpp  spectral_difference_hwr.hpp
src/transformers/window/: all.hpp  blackman.hpp  hamming.hpp  hann.hpp  rectangular.hpp  tukey.hpp
tests/: CMakeLists.txt  test_btrack.cpp  test_btrack_original.cpp  test_fft_operator.cpp
unit-tests/: CMakeLists.txt  Test_BTrack.cpp
unit-tests/BTrack Tests/tests/: Test_BTrack.cpp
